Files + Copy edits.
Files + Copy edits.

--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -37,9 +37,9 @@
     </figure>
     <div class="translationllc__section-icon">
      <p class="translationllc__section-icon__copy--container translationllc__section-icon__copy--container--intro">
-       Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today's world.
-       Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows that we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more.
-       We invite you to scroll down and explore the many facets of who we are, and the many ways in which we help brands thrive in contemporary culture.
+       
+       Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today’s world. Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more.
+       
      </p>
     </div>
   </section>
@@ -155,7 +155,9 @@
     <div class="translation__main__video-text-content">
       <h3 class="translation__main__video-text-content__header">CHRIS & CLIFF PAUL WERE BORN TO ASSIST</h3>
       <p class="translation__main__video-text-content__content">
-        With the birth of Chris Paul’s alter-ego, Cliff Paul, came the unlikely union of two disparate worlds; insurance and&nbsp;basketball.
+      
+      With the birth of Chris Paul’s alter ego, Cliff Paul, came the unlikely union of two disparate worlds: insurance and basketball.
+        
       </p>
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="workVideoSeven">
@@ -191,6 +193,17 @@
     <div class="translationllc__section-icon translationllc__section-icon--news preserveAspectRatio">
     </div>
     <div class="translationllc__main__articles">
+    
+        
+          <div class="translationllc__main__articles__article">
+        <h5 class="translationllc__main__articles__article-publication">BRAND CHANNEL</h5>
+        <div class="translationllc__main__articles__article-title-author-container">
+          <a class="translationllc__main__articles__article-link" href="http://www.brandchannel.com/2017/06/20/cannes-lions-nba-nfl-062017/">Cannes 2017: The Wise women of the NBA and NFL</a>
+          <p class="translationllc__main__articles__article-author">BY: SHEILA SHAYON</p>
+        </div>
+      </div>
+      <hr class="translationllc__news-hr">
+    
       <div class="translationllc__main__articles__article">
         <h5 class="translationllc__main__articles__article-publication">BERKELEY NEWS</h5>
         <div class="translationllc__main__articles__article-title-author-container">
