--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://www.translationllc.com/assets/translation-FB-share.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
-    <title>TranslationLLC</title>
+    <title>Translation</title>
     <link rel="icon"
       type="image/png"
       href="/assets/favicon.ico">
