--- a/templates/partials/header.handlebars
+++ b/templates/partials/header.handlebars
@@ -1,6 +1,14 @@
 <header style="opacity: 0" id="nav" class="translationllc__header">
 
-  <div id="introSectionNav" class="translationllc__header__translation-logo">
+  <!--<div id="introSectionNav" class="translationllc__header__translation-logo">
+  </div>
+  --->
+  
+  
+  <div id="introSectionNav" class="translationllc__header__translation-logo_sermad">
+  	<a href="#top">
+  		<img src="assets/translation_logo.svg" />
+  	</a>
   </div>
 
   <nav  class="translationllc__nav">
