--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -43,6 +43,7 @@
      </p>
     </div>
   </section>
+  
   <section id="workSection" class="translationllc__main__work">
     <div class=" translationllc__section-icon translationllc__section-icon--work preserveAspectRatio">
     </div>
@@ -189,6 +190,7 @@
       </p>
     </div>
   </section>
+  
   <section id="newsSection">
     <div class="translationllc__section-icon translationllc__section-icon--news preserveAspectRatio">
     </div>
@@ -251,7 +253,7 @@
         </video>
       </figure>
       <button class="translationllc__video__play-button" id="biggiebreakfast" type="button" name="button">
-      </button>
+      </button>`
     </tllcvideo>
     <div class="translation__main__video-text-content">
       <h3 class="translation__main__video-text-content__header">A BIG WAY TO SPREAD LOVE IN BROOKLYN</h3>
@@ -276,20 +278,24 @@
     <div class="translationllc__contact-us__two-column-container">
       <div class="translationllc__contact-us__two-column-container__column">
         <div class="translationllc__contact-us__container">
-          <p>NYC</p>
+          <h4>NYC</h4>
           <p>145 West 45th Street</p>
           <p>12th Floor</p>
           <p>New York, NY 10036</p>
         </div>
+
         <div class="translationllc__contact-us__container">
-          <a href="tel:1-212-299-5505">212.299.5505</a>
-        </div>
-        <div class="translationllc__contact-us__container">
-          <p>SF</p>
+          <h4>SF</h4>
           <p>2360 3rd Street</p>
           <p>San Francisco, CA 94107</p>
         </div>
+        
+        <div class="translationllc__contact-us__container_tel">
+          <a href="tel:1-212-299-5505">212.299.5505</a>
+        </div>
+        
       </div>
+      
       <div class="">
         <div class="translationllc__contact-us__container translationllc__contact-us__container--new-business">
           <p>New Business:</p>
