--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -21,6 +21,7 @@
         </div>
       </div>
     </div>
+    
     <figure class="translationllc__video__container--intro preserveAspectRatio">
       <tllcvideoSvgOverlay>
         <div class="translationllc__video__container__overlay--intro">
@@ -45,7 +46,7 @@
   </section>
   
   <section id="workSection" class="translationllc__main__work">
-    <div class=" translationllc__section-icon translationllc__section-icon--work preserveAspectRatio">
+    <div class=" translationllc__section-icon translationllc__section-icon--work">
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="sizzleVideo">
       <figure class="translationllc__video__container--work-video translationllc__video__container--feature-video preserveAspectRatio">
@@ -58,7 +59,10 @@
     <div class="translation__main__video-text-content">
       <h3 class="translation__main__video-text-content__header">GREATEST HITS</h3>
       <p class="translation__main__video-text-content__content">
-        Whether it’s creating an alter-ego for an NBA All-Star, a music festival for the new America, or giving the king of Snapchat his very own store, our work drives our partners conversations.
+      
+      Whether it’s creating an alter-ego for an NBA All-Star, a music festival for the new America, or giving the king of Snapchat his very own store, our work drives the cultural resonance of our partner brands.
+  
+      
       </p>
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="workVideoOne">
@@ -192,10 +196,10 @@
   </section>
   
   <section id="newsSection">
-    <div class="translationllc__section-icon translationllc__section-icon--news preserveAspectRatio">
+    <div class="translationllc__section-icon translationllc__section-icon--news">
     </div>
-    <div class="translationllc__main__articles">
     
+    <div class="translationllc__main__articles">
         
           <div class="translationllc__main__articles__article">
         <h5 class="translationllc__main__articles__article-publication">BRAND CHANNEL</h5>
@@ -240,7 +244,7 @@
   </section>
   <section id="cultureSection">
     <div class="translationllc__section-icon--contains-copy translationllc__section-icon">
-      <div class="translationllc__section-icon--culture preserveAspectRatio">
+      <div class="translationllc__section-icon--culture">
       </div>
       <p class="translationllc__section-icon__copy--container">
         We believe brands that are brave enough to lead culture will always be more successful than brands chasing to follow it.
