--- a/public/css/contactUs.mobile.css
+++ b/public/css/contactUs.mobile.css
@@ -1,9 +1,9 @@
 .translationllc__contact-us__header {
-  font-size: 20px;
+  /*font-size: 20px;*/
   margin-bottom: 40px;
 }
 .translationllc__contact-us__container {
-  font-size: 14px;
+  /*font-size: 14px;*/
   margin-bottom: 30px;
 }
 .translationllc__contact-us__social-media {
@@ -32,7 +32,7 @@
 }
 .translationllc__contact-us__copyright {
   color: grey;
-  font-size: 12px;
+  /*font-size: 12px;*/
   padding-bottom: 40px;
 }
 .translationllc__contact-us {
