--- a/public/css/nav.desktop.css
+++ b/public/css/nav.desktop.css
@@ -14,7 +14,7 @@
   position: absolute;
   right: 0;
   width: 19%;
-  font-size: 14px;
+  /*font-size: 14px;*/
   top: 50%;
   transform: translateY(-50%);
 }
