--- a/public/css/sectionIcon.desktop.css
+++ b/public/css/sectionIcon.desktop.css
@@ -33,13 +33,13 @@
   margin: auto;
   left: 0;
   right: 0;
-  font-size: 18px;
+  /*font-size: 18px;*/
 }
 .translationllc__section-icon__copy--container {
   width: 50%;
   margin: auto;
   text-align: center;
-  font-size: 18px;
+  /*font-size: 18px;*/
 }
 .translationllc__section-icon__copy--container--intro {
   margin-top: 10rem;
