--- a/public/css/stoutisms.desktop.css
+++ b/public/css/stoutisms.desktop.css
@@ -8,6 +8,6 @@
   background-size: 40%;
 }
 .translationllc__stoutism-words--html {
-  font-size: 38px;
-  letter-spacing: 2px;
+  /*font-size: 38px;*/
+  /*letter-spacing: 2px;*/
 }
