--- a/public/css/news.mobile.css
+++ b/public/css/news.mobile.css
@@ -9,23 +9,29 @@
   padding-bottom: 20px;
 }
 .translationllc__main__articles__article-publication {
-  font-size: 12px;
+  /*font-size: 12px;*/
   margin: 0;
   margin-bottom: 5px;
 }
 .translationllc__main__articles__article-link {
-  font-size: 18px;
+  
+  /*font-size: 18px;*/
+  
   margin-bottom: 5px;
   display: block;
 }
 .translationllc__main__articles__article-author {
-  font-size: 10px;
+  
+  /*font-size: 10px;*/
+  
 }
 .translationllc__main__articles__article--news {
   padding: .625rem 0 .625rem 0;
 }
 .translationllc__main__articles__news {
-  font-size: 24px;
+  
+  /*font-size: 24px;*/
+  
 }
 .translationllc__news-hr {
   display: none;
