--- a/public/css/sermad_mobile.css
+++ b/public/css/sermad_mobile.css
@@ -1,3 +1,32 @@
+.translationllc__main__articles__article-publication {
+	color:#a6a6a6;
+}
+
+.translationllc__main__articles__article-author {
+	color:#a6a6a6;
+}
+
+.translationllc__video__container__overlay--intro {
+	width:100%;
+	text-align:center;
+}
+
+.translationllc__video__container__overlay__first-block {
+	font-size:55%;
+	width:60%;
+	position:relative;
+	letter-spacing:1px;
+}
+
+.translationllc__video__container__overlay__second-block {
+	flex-direction:row;
+	font-size:55%;
+	width:60%;
+	margin-top:70%;
+	position:relative;
+	letter-spacing:1px;
+}
+
 .translationllc__header__translation-logo_sermad {
 	display:none;
 }
@@ -21,28 +50,32 @@
 
 .translationllc__section-icon--work {
 	background-size: 40%;
-	height:400px;
+	height:500px;
 	/*padding-bottom:2em;*/
 }
 
 .translation__main__video-text-content__header {
-	font-size:1.3em;
-	letter-spacing:0.1em;
+	/*font-size:1.3em;*/
+	/*letter-spacing:0.1em;*/
+
 }
 
 .translationllc__section-icon--news {
 	background-size: 60%;
+	/*background-size: 385px;*/
 	height:400px;
 }
 
 .translationllc__section-icon--culture {
 	background-size: 80%;
-	height:400px;
+	height:200px;
+	margin-bottom:50px;
 }
 
 .translationllc__section-icon--majors-minors {
 	background-size: 80%;
-	height:400px;
+	height:200px;
+	margin-bottom:100px;
 }
 
 #cultureSection .offset {
@@ -60,5 +93,38 @@
 }
 
 #workSection {
+
+}
+
+.translationllc__main__articles {
+	padding-top:4em;
+}
+
+@media screen and (min-width: 414px) and (max-width: 736px) {	
+
+.translationllc__video__container__overlay__first-block {
+	font-size:13px;
+	width:70%;
+}
+
+.translationllc__video__container__overlay__second-block {
+	width:70%;
+	font-size:13px;
+	/*border:1px solid red;*/
+}
+
+}
+
+@media screen and (min-width: 737px) and (max-width: 959px) {	
+
+.translationllc__video__container__overlay__first-block {
+	font-size:20px;
+	width:65%;
+}
+
+.translationllc__video__container__overlay__second-block {
+	width:65%;
+	font-size:20px;
+}
 
 }
