--- a/public/css/stoutisms.mobile.css
+++ b/public/css/stoutisms.mobile.css
@@ -47,8 +47,8 @@
   text-align: center;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 16px;
-  letter-spacing: 0px;
+  /*font-size: 16px;*/
+  /*letter-spacing: 0px;*/
   position: relative;
 }
 .translationllc__stoutism-words--html__margin-bottom {
