--- a/public/css/video.desktop.css
+++ b/public/css/video.desktop.css
@@ -6,18 +6,20 @@
   background-image: url(../assets/translation-desktop-header.jpg);
 }
 .translation__main__video-text-content__header {
-  font-size: 26px;
+  
   width: 58%;
   margin: auto;
   margin-bottom: 15px;
-  letter-spacing: 2px;
+  
+  /*font-size: 26px;*/
+  /*letter-spacing: 2px;*/
 }
 .translation__main__video-text-content__content {
   width: 58%;
   margin: auto;
 }
 .translation__main__video-text-content {
-  font-size: 14px;
+  /*font-size: 14px;*/
   width: 100%;
   padding-top: 110px;
   padding-bottom: 110px;
@@ -31,20 +33,26 @@
   margin: auto;
   display: flex;
   justify-content: space-between;
-  font-size: 30px;
+  
   position: absolute;
-  letter-spacing: 4px;
-  font-size: 32px;
+  
+  /*font-size: 30px;*/
+  /*letter-spacing: 4px;*/
+  /*font-size: 32px;*/
 }
+
 .translationllc__video__container__overlay__second-block {
   width: 100%;
   margin: auto;
   display: flex;
   justify-content: space-between;
-  font-size: 30px;
+  
   position: absolute;
-  font-size: 32px;
-  letter-spacing: 4px;
+  
+  /*font-size: 30px;*/
+  /*font-size: 32px;*/
+  /*letter-spacing: 4px;*/
+  
   bottom: 0;
   text-align: left;
   flex-direction: row;
