--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta name="description" content="Trends are perishable, cool is forever. Seeing how culture can propel brands forward in ways that advertising alone could never do, we set out to build a company uniquely suited to help brands thrive in contemporary times. We know that brands that lead culture will be more successful than brands that follow.">
     <meta name="keywords" content="Translation, agency, creative, advertising, film, entertainment, content, technology, communication, design, branding, marketing">
     <meta property="og:title" content="Translation"/>
-    <meta property="og:description" content="Trends are perishable, cool is forever. Seeing how culture can propel brands forward in ways that advertising alone could never do, we set out to build a company uniquely suited to help brands thrive in contemporary times. We know that brands that lead culture will be more successful than brands that follow."/>
+    <meta property="og:description" content="Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today’s world. Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more."/>
     <meta property="og:url" content="http://www.translationllc.com/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://www.translationllc.com/assets/translation-FB-share.jpg"/>
