transition animation on plus icon desktop, translation logo navigates to top

--- a/public/css/introAnimation.mobile.css
+++ b/public/css/introAnimation.mobile.css
@@ -97,6 +97,10 @@
   height: 100%;
   top: 45%;
 }
+.translationllc__intro__background__plus--desktop--active {
+  transform: scale(60);
+  transition: all 1s linear;
+}
 .translationllc__intro__carousel--desktop__wrapper {
   height: 350%;
 }
