--- a/templates/partials/header.handlebars
+++ b/templates/partials/header.handlebars
@@ -1,14 +1,7 @@
 <header style="opacity: 0" id="nav" class="translationllc__header">
-
-  <!--<div id="introSectionNav" class="translationllc__header__translation-logo">
-  </div>
-  --->
-
-
-
-  <div id="introSectionNav" class="translationllc__header__translation-logo_sermad">
+  <a href="#introSection" id="introSectionNav" class="translationllc__header__translation-logo_sermad">
     <img src="assets/translation_logo.svg" />
-  </div>
+  </a>
   <nav  class="translationllc__nav">
     <a href="#workSection">Work</a>
     <a href="#newsSection">News</a>
