changed meta tags and ensured that sermad css loads last

--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Trends are perishable, cool is forever. Seeing how culture can propel brands forward in ways that advertising alone could never do, we set out to build a company uniquely suited to help brands thrive in contemporary times. We know that brands that lead culture will be more successful than brands that follow.">
+    <meta name="description" content="Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today’s world. Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more.">
     <meta name="keywords" content="Translation, agency, creative, advertising, film, entertainment, content, technology, communication, design, branding, marketing">
     <meta property="og:title" content="Translation"/>
     <meta property="og:description" content="Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today’s world. Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more."/>
