--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -16,7 +16,9 @@
       type="image/png"
       href="/assets/favicon.ico">
     <link rel="stylesheet" media="screen and (max-width: 959px)" href="dist/bundle.mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 959px)" href="css/sermad_mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 960px)" href="dist/bundle.desktop.css">
+    <link rel="stylesheet" media="screen and (min-width: 960px)" href="css/sermad_desktop.css">
   </head>
   <body>
     {{{body}}}
