new majors minors svg, removed um from nav

--- a/public/css/sectionIcon.mobile.css
+++ b/public/css/sectionIcon.mobile.css
@@ -45,7 +45,7 @@
 }
 .translationllc__section-icon--majors-minors {
   /*height: 340px;*/
-  background-image: url(../assets/majorminors_trimmed.svg);
+  background-image: url(../assets/majorsminors.svg);
   background-repeat: no-repeat;
   background-position: center;
   /*background-size: contain;*/
