--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,6 +6,6 @@
     <a href="#workSection">Work</a>
     <a href="#newsSection">News</a>
     <a href="#cultureSection">Culture</a>
-    <a class="translationllc__nav__united-masters" href="#unitedMastersSection">United Masters</a>
+    <!-- <a class="translationllc__nav__united-masters" href="#unitedMastersSection">United Masters</a> -->
   </nav>
 </header>
