--- a/public/css/introAnimation.desktop.css
+++ b/public/css/introAnimation.desktop.css
@@ -1,1 +1,6 @@
-
+.translationllc__intro__background__plus {
+  width: 30%;
+}
+.translationllc__intro__carousel--desktop__wrapper {
+  height: 350%;
+}
