--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,45 @@
 {{> header}}
 <main id="translationllcIntro" class="translationllc__intro" style="opacity: 1">
   <div id="translationllcWeAreTranslation" class="translationllc__intro__background__we-are-translation">
-    <div id="animationPlusIcon" class="translationllc__intro__background__plus">
-    </div>
   </div>
-  <div id="carouselDesktopWrapper" class="hide-component translationllc__intro__carousel--desktop__wrapper">
+  <div id="carouselDesktopWrapper" class="translationllc__intro__carousel--desktop__wrapper">
     <div class="translationllc__intro__carousel--desktop" id="translationllcAnimationDesktop">
     </div>
   </div>
-  <div id="translationllcWeAreTranslationDesktop" class="hide-component translationllc__intro__background__we-are-translation--desktop">
-    <div id="animationPlusIconDesktop" class="hide-component translationllc__intro__background__plus--desktop">
-    </div>
+  <div id="translationllcWeAreTranslationDesktop" class="translationllc__intro__background__we-are-translation--desktop">
+    <svg version="1.1" id="animationPlusIcon2" style="opacity: 0" class="translationllc__intro__background__plus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    	 viewBox="0 0 342.2 439.2" style="enable-background:new 0 0 342.2 439.2;" xml:space="preserve">
+    <style type="text/css">
+    	.st2 {
+    	   fill:#171717;
+      }
+    </style>
+    <title>WeAreTranslation</title>
+    <polygon id="animationPlusIconSvg2" class="st2" points="282.6,201.4 186.6,201.4 186.6,103 154.3,103 154.3,201.4 58.3,201.4 58.3,233.8 154.3,233.8
+    	154.3,334.9 186.6,334.9 186.6,233.8 282.6,233.8 "/>
+    </svg>
+    <svg version="1.1" id="animationPlusIcon1" style="opacity: 0" class="translationllc__intro__background__plus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    	 viewBox="0 0 342.2 439.2" style="enable-background:new 0 0 342.2 439.2;" xml:space="preserve">
+    <style type="text/css">
+    	.st1 {
+    	   fill:white;
+      }
+    </style>
+    <title>WeAreTranslation</title>
+    <polygon id="animationPlusIconSvg1" class="st1" points="282.6,201.4 186.6,201.4 186.6,103 154.3,103 154.3,201.4 58.3,201.4 58.3,233.8 154.3,233.8
+    	154.3,334.9 186.6,334.9 186.6,233.8 282.6,233.8 "/>
+    </svg>
+    <svg version="1.1" id="animationPlusIcon" class="translationllc__intro__background__plus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    	 viewBox="0 0 342.2 439.2" style="enable-background:new 0 0 342.2 439.2;" xml:space="preserve">
+    <style type="text/css">
+    	.st0 {
+    	   fill:#171717;
+      }
+    </style>
+    <title>WeAreTranslation</title>
+    <polygon id="animationPlusIconSvg" class="st0" points="282.6,201.4 186.6,201.4 186.6,103 154.3,103 154.3,201.4 58.3,201.4 58.3,233.8 154.3,233.8
+    	154.3,334.9 186.6,334.9 186.6,233.8 282.6,233.8 "/>
+    </svg>
   </div>
 </main>
 <main id="translationllcMain" class="translationllc__main" style="opacity: 0">
@@ -21,7 +50,6 @@
         </div>
       </div>
     </div>
-
     <figure class="translationllc__video__container--intro preserveAspectRatio">
       <tllcvideoSvgOverlay>
         <div class="translationllc__video__container__overlay--intro">
