--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today’s world. Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more."/>
     <meta property="og:url" content="http://www.translationllc.com/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://www.translationllc.com/assets/translation-FB-share.jpg"/>
+    <meta property="og:image" content="http://www.translationllc.com/assets/translation-FB-share.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <title>Translation</title>
     <link rel="icon"
