--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,5 @@
 {{> header}}
 <main id="translationllcIntro" class="translationllc__intro" style="opacity: 1">
-  <div id="translationllcWeAreTranslation" class="translationllc__intro__background__we-are-translation">
-  </div>
   <div id="carouselDesktopWrapper" class="translationllc__intro__carousel--desktop__wrapper">
     <div class="translationllc__intro__carousel--desktop" id="translationllcAnimationDesktop">
     </div>
@@ -43,7 +41,7 @@
   </div>
 </main>
 <main id="translationllcMain" class="translationllc__main" style="opacity: 0">
-  <section id="introSection" class="translationllc__main__intro">
+  <section id="intro" class="translationllc__main__intro">
     <div id="backgroundParallaxOne" class="backgroundParallaxOne preserveAspectRatio">
       <div id="translationllcWeAreCulturalCatalysts" class="translationllc__main__intro__we-are preserveAspectRatio">
         <div id="translationllcCulturalCatalysts" class="translationllc__main__intro__we-are-translation preserveAspectRatio landscapePreserveAspectRatio">
@@ -70,7 +68,7 @@
      </p>
     </div>
   </section>
-  <section id="workSection" class="translationllc__main__work">
+  <section id="work" class="translationllc__main__work">
     <div class=" translationllc__section-icon translationllc__section-icon--work">
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="sizzleVideo">
@@ -260,7 +258,7 @@
     </div>
   </section>
 
-  <section id="newsSection">
+  <section id="news">
     <div class="translationllc__section-icon translationllc__section-icon--news">
     </div>
     <div class="translationllc__main__articles">
@@ -304,7 +302,7 @@
       </div>
     </div>
   </section>
-  <section id="cultureSection">
+  <section id="culture">
     <div class="translationllc__section-icon--contains-copy translationllc__section-icon">
       <div class="translationllc__section-icon--culture">
       </div>
@@ -343,7 +341,7 @@
       </div>
     </div>
   </section>
-  <section class="translationllc__united-masters" id="unitedMastersSection">
+  <section class="hide-component translationllc__main__united-masters" id="unitedMasters">
     <img class="translationllc__main__united-masters__gif" src="../assets/unitedMasters.gif" alt="united masters mtv gif">
     <div class="translationllc__main__united-masters__next-chapter">
       <h2 class="translationllc__main__united-masters__next-chapter__header">OUR NEXT CHAPTER</h2>
