--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,11 +1,11 @@
 <header style="opacity: 0" id="nav" class="translationllc__header">
-  <a href="#introSection" id="introSectionNav" class="translationllc__header__translation-logo_sermad">
-    <img src="assets/translation_logo.svg" />
+  <a href="#intro" id="introSectionNav" class="translationllc__header__translation-logo_sermad">
+    <img class="translationllc__header__translation-logo_sermad__logo" src="assets/translation_logo.svg" />
   </a>
   <nav  class="translationllc__nav">
-    <a href="#workSection">Work</a>
-    <a href="#newsSection">News</a>
-    <a href="#cultureSection">Culture</a>
+    <a href="#work">Work</a>
+    <a href="#news">News</a>
+    <a href="#culture">Culture</a>
     <!-- <a class="translationllc__nav__united-masters" href="#unitedMastersSection">United Masters</a> -->
   </nav>
 </header>
