Updated meta tags.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,16 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today’s world. Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more.">
     <meta name="keywords" content="Translation, agency, creative, advertising, film, entertainment, content, technology, communication, design, branding, marketing">
+    
     <meta property="og:title" content="Translation"/>
     <meta property="og:description" content="Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today’s world. Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more."/>
-    <meta property="og:url" content="http://www.translationllc.com/"/>
+    <meta property="og:url" content="//www.translationllc.com/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="http://www.translationllc.com/assets/translation-FB-share.jpg"/>
-    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="og:image" content="//www.translationllc.com/assets/translation-FB-share.jpg"/>
+
     <title>Translation</title>
-    <link rel="icon"
-      type="image/png"
-      href="/assets/favicon.ico">
+
+<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+      
     <link rel="stylesheet" media="screen and (max-width: 959px)" href="dist/bundle.mobile.css">
     <link rel="stylesheet" media="screen and (max-width: 959px)" href="css/sermad_mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 960px)" href="dist/bundle.desktop.css">
