added jump to um flag

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -341,7 +341,7 @@
       </div>
     </div>
   </section>
-  <section class="hide-component translationllc__main__united-masters" id="unitedMasters">
+  <section class="translationllc__main__united-masters" id="unitedMasters">
     <img class="translationllc__main__united-masters__gif" src="../assets/unitedMasters.gif" alt="united masters mtv gif">
     <div class="translationllc__main__united-masters__next-chapter">
       <h2 class="translationllc__main__united-masters__next-chapter__header">OUR NEXT CHAPTER</h2>
